--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    @apply bg-primary-dark text-white overflow-y-hidden;
+    @apply bg-primary-dark text-white overflow-x-hidden;
 }
